--- a/wwwroot/i18n/en-US.json
+++ b/wwwroot/i18n/en-US.json
@@ -1,142 +1,142 @@
 {
-  "menu": {
-    "dashboard": "Tablero",
-    "design": "Diseño",
-    "design.colors": "Sistema de Colores",
-    "design.icons": "Iconos Material",
-    "material": "Material",
-    "material.form-controls": "Controles de Formularios",
-    "material.form-controls.autocomplete": "Autocompletar",
-    "material.form-controls.checkbox": "Casilla de Verificación",
-    "material.form-controls.datepicker": "Selector de Fecha",
-    "material.form-controls.form-field": "Campo de Formulario",
-    "material.form-controls.input": "Entrada",
-    "material.form-controls.radio": "Botón de Radio",
-    "material.form-controls.select": "Selector",
-    "material.form-controls.slider": "Deslizador",
-    "material.form-controls.slide-toggle": "Interruptor Deslizante",
-    "material.navigation": "Navegación",
-    "material.navigation.menu": "Menú",
-    "material.navigation.sidenav": "Menú Lateral",
-    "material.navigation.toolbar": "Barra de Herramientas",
-    "material.layout": "Diseño",
-    "material.layout.card": "Tarjeta",
-    "material.layout.divider": "Divisor",
-    "material.layout.expansion": "Panel de Expansión",
-    "material.layout.grid-list": "Lista en Cuadrícula",
-    "material.layout.list": "Lista",
-    "material.layout.stepper": "Indicador de Pasos",
-    "material.layout.tab": "Pestaña",
-    "material.layout.tree": "Árbol",
-    "material.buttons-indicators": "Botones e Indicadores",
-    "material.buttons-indicators.button": "Botones",
-    "material.buttons-indicators.button-toggle": "Interruptor de Botones",
-    "material.buttons-indicators.badge": "Insignia",
-    "material.buttons-indicators.chips": "Chips",
-    "material.buttons-indicators.icon": "Ícono",
-    "material.buttons-indicators.progress-spinner": "Indicador de Progreso",
-    "material.buttons-indicators.progress-bar": "Barra de Progreso",
-    "material.buttons-indicators.ripple": "Efecto Ripple",
-    "material.popups-modals": "Popups y Modales",
-    "material.popups-modals.bottom-sheet": "Panel Inferior",
-    "material.popups-modals.dialog": "Diálogo",
-    "material.popups-modals.snackbar": "Snackbar",
-    "material.popups-modals.tooltip": "Tooltip",
-    "material.data-table": "Tabla de Datos",
-    "material.data-table.paginator": "Paginador",
-    "material.data-table.sort": "Ordenar",
-    "material.data-table.table": "Tabla",
-    "media": "Medios",
-    "media.gallery": "Galería",
-    "forms": "Formularios",
-    "forms.form-elements": "Elementos de Formularios",
-    "forms.dynamic-form": "Formulario Dinámico",
-    "forms.select": "Selector",
-    "forms.datetime": "Fecha y Hora",
-    "tables": "Tablas",
-    "tables.kitchen-sink": "Ejemplo Completo",
-    "tables.remote-data": "Datos Remotos",
-    "profile": "Perfil",
-    "profile.overview": "Resumen",
-    "profile.settings": "Configuraciones",
-    "extensions": "Extensiones",
-    "sessions": "Sesiones",
-    "sessions.403": "403",
-    "sessions.404": "404",
-    "sessions.500": "500",
-    "utilities": "Utilidades",
-    "utilities.css-grid": "Grid CSS",
-    "utilities.css-helpers": "Helpers CSS",
-    "menu-level": "Nivel de Menú",
-    "menu-level.level-1-1": "Nivel 1.1",
-    "menu-level.level-1-2": "Nivel 1.2",
-    "menu-level.level-1-1.level-2-1": "Nivel 2.1",
-    "menu-level.level-1-1.level-2-2": "Nivel 2.2",
-    "menu-level.level-1-1.level-2-1.level-3-1": "Nivel 3.1",
-    "menu-level.level-1-1.level-2-1.level-3-1.level-4-1": "Nivel 4.1",
-    "permissions": "Permisos",
-    "permissions.role-switching": "Cambio de Rol",
-    "permissions.route-guard": "Guardia de Ruta",
-    "permissions.test": "Prueba de Permiso"
-  },
-  "validation": {
-    "required": "Este campo es obligatorio",
-    "min_length": "Este valor debe tener al menos {{number}} caracteres",
-    "max_length": "Este valor debe tener como máximo {{number}} caracteres",
-    "min": "Este valor debe ser como mínimo {{number}}",
-    "max": "Este valor debe ser como máximo {{number}}",
-    "exist": "El valor {{value}} ya existe",
-    "inconsistent": "Inconsistente con {{value}}",
-    "invalid_email": "Correo electrónico inválido"
-  },
-  "paginator": {
-    "items_per_page_label": "Elementos por página:",
-    "next_page_label": "Página siguiente",
-    "previous_page_label": "Página anterior",
-    "first_page_label": "Primera página",
-    "last_page_label": "Última página",
-    "range_page_label_1": "sin registros",
-    "range_page_label_2": "{{startIndex}} - {{endIndex}} de {{length}}"
-  },
-  "en_us": "Inglés",
-  "zh_cn": "Chino Simplificado",
-  "zh_tw": "Chino Tradicional",
-  "system": "Sistema",
-  "position": "Posición",
-  "name": "Nombre",
-  "weight": "Peso",
-  "symbol": "Símbolo",
-  "gender": "Género",
-  "mobile": "Móvil",
-  "tele": "Teléfono",
-  "birthday": "Fecha de Nacimiento",
-  "city": "Ciudad",
-  "address": "Dirección",
-  "website": "Sitio Web",
-  "company": "Compañía",
-  "email": "Correo Electrónico",
-  "operation": "Operación",
-  "edit": "Editar",
-  "delete": "Eliminar",
-  "confirm_delete": "¿Confirmar eliminación?",
-  "ok": "Aceptar",
-  "close": "Cerrar",
-  "profile": "Perfil",
-  "edit_profile": "Editar perfil",
-  "logout": "Cerrar sesión",
-  "login": "Iniciar sesión",
-  "login_title": "Bienvenido de nuevo",
-  "have_no_account": "¿No tienes una cuenta?",
-  "create_one_account": "Haz clic aquí para crear una",
-  "please_enter": "Por favor ingresa",
-  "username": "Nombre de usuario",
-  "password": "Contraseña",
-  "confirm_password": "Confirmar contraseña",
-  "remember_me": "Recordarme",
-  "register": "Crear cuenta",
-  "register_welcome": "Bienvenido",
-  "register_title": "Solo toma unos segundos crear tu cuenta",
-  "read_and_agree": "He leído y acepto los términos del servicio",
-  "have_an_account": "Ya tengo una cuenta",
-  "restore_defaults": "Restaurar valores predeterminados"
+    "menu": {
+        "dashboard": "Dashboard",
+        "design": "Design",
+        "design.colors": "Color System",
+        "design.icons": "Material Icons",
+        "material": "Material",
+        "material.form-controls": "Form Controls",
+        "material.form-controls.autocomplete": "Autocomplete",
+        "material.form-controls.checkbox": "Checkbox",
+        "material.form-controls.datepicker": "Datepicker",
+        "material.form-controls.form-field": "Form Field",
+        "material.form-controls.input": "Input",
+        "material.form-controls.radio": "Radio",
+        "material.form-controls.select": "Select",
+        "material.form-controls.slider": "Slider",
+        "material.form-controls.slide-toggle": "Slide Toggle",
+        "material.navigation": "Navigation",
+        "material.navigation.menu": "Menu",
+        "material.navigation.sidenav": "Sidenav",
+        "material.navigation.toolbar": "Toolbar",
+        "material.layout": "Layout",
+        "material.layout.card": "Card",
+        "material.layout.divider": "Divider",
+        "material.layout.expansion": "Expansion Panel",
+        "material.layout.grid-list": "Grid List",
+        "material.layout.list": "List",
+        "material.layout.stepper": "Stepper",
+        "material.layout.tab": "Tab",
+        "material.layout.tree": "Tree",
+        "material.buttons-indicators": "Buttons & Indicators",
+        "material.buttons-indicators.button": "Buttons",
+        "material.buttons-indicators.button-toggle": "Button Toggle",
+        "material.buttons-indicators.badge": "Badge",
+        "material.buttons-indicators.chips": "Chips",
+        "material.buttons-indicators.icon": "Icon",
+        "material.buttons-indicators.progress-spinner": "Progress Spinner",
+        "material.buttons-indicators.progress-bar": "Progress Bar",
+        "material.buttons-indicators.ripple": "Ripple",
+        "material.popups-modals": "Popups & Modals",
+        "material.popups-modals.bottom-sheet": "Bottom Sheet",
+        "material.popups-modals.dialog": "Dialog",
+        "material.popups-modals.snackbar": "Snackbar",
+        "material.popups-modals.tooltip": "Tooltip",
+        "material.data-table": "Data Table",
+        "material.data-table.paginator": "Paginator",
+        "material.data-table.sort": "Sort",
+        "material.data-table.table": "Table",
+        "media": "Media",
+        "media.gallery": "Gallery",
+        "forms": "Forms",
+        "forms.form-elements": "Form Elements",
+        "forms.dynamic-form": "Dynamic Form",
+        "forms.select": "Select",
+        "forms.datetime": "Date Time",
+        "tables": "Tables",
+        "tables.kitchen-sink": "Kitchen Sink",
+        "tables.remote-data": "Remote Data",
+        "profile": "Profile",
+        "profile.overview": "Overview",
+        "profile.settings": "Settings",
+        "extensions": "Extensions",
+        "sessions": "Sessions",
+        "sessions.403": "403",
+        "sessions.404": "404",
+        "sessions.500": "500",
+        "utilities": "Utilities",
+        "utilities.css-grid": "CSS Grid",
+        "utilities.css-helpers": "CSS Helpers",
+        "menu-level": "Menu Level",
+        "menu-level.level-1-1": "Level 1.1",
+        "menu-level.level-1-2": "Level 1.2",
+        "menu-level.level-1-1.level-2-1": "Level 2.1",
+        "menu-level.level-1-1.level-2-2": "Level 2.2",
+        "menu-level.level-1-1.level-2-1.level-3-1": "Level 3.1",
+        "menu-level.level-1-1.level-2-1.level-3-1.level-4-1": "Level 4.1",
+        "permissions": "Permissions",
+        "permissions.role-switching": "Role Switching",
+        "permissions.route-guard": "Route Guard",
+        "permissions.test": "Permission Test"
+    },
+    "validation": {
+        "required": "This field is required",
+        "min_length": "This value should be no less than {{number}} characters",
+        "max_length": "This value should be no more than {{number}} characters",
+        "min": "This value should be no less than {{number}}",
+        "max": "This value should be no more than {{number}}",
+        "exist": "The {{value}} has exists",
+        "inconsistent": "Inconsistent with {{value}}",
+        "invalid_email": "Invalid email"
+    },
+    "paginator": {
+        "items_per_page_label": "Items per page:",
+        "next_page_label": "Next page",
+        "previous_page_label": "Previous page",
+        "first_page_label": "First page",
+        "last_page_label": "Last page",
+        "range_page_label_1": "no record",
+        "range_page_label_2": "{{startIndex}} - {{endIndex}} of {{length}}"
+    },
+    "en_us": "English",
+    "zh_cn": "Simplified Chinese",
+    "zh_tw": "Traditional Chinese",
+    "system": "System",
+    "position": "Position",
+    "name": "Name",
+    "weight": "Weight",
+    "symbol": "Symbol",
+    "gender": "Gender",
+    "mobile": "Mobile",
+    "tele": "Telephone",
+    "birthday": "Birthday",
+    "city": "City",
+    "address": "Address",
+    "website": "Website",
+    "company": "Company",
+    "email": "Email",
+    "operation": "Operation",
+    "edit": "Edit",
+    "delete": "Delete",
+    "confirm_delete": "Confirm delete?",
+    "ok": "Ok",
+    "close": "Close",
+    "profile": "Profile",
+    "edit_profile": "Edit profile",
+    "logout": "logout",
+    "login": "Login",
+    "login_title": "Welcome Back",
+    "have_no_account": "Don't have an account",
+    "create_one_account": "Click here to create one",
+    "please_enter": "Please enter",
+    "username": "Username",
+    "password": "Password",
+    "confirm_password": "Confirm Password",
+    "remember_me": "Remember Me",
+    "register": "Create account",
+    "register_welcome": "Welcome",
+    "register_title": "It only takes a few seconds to create your account",
+    "read_and_agree": "I have read and agree to the terms of service",
+    "have_an_account": "Already have an account",
+    "restore_defaults": "Restore defaults"
 }
