--- a/wwwroot/i18n/es-CO.json
+++ b/wwwroot/i18n/es-CO.json
@@ -125,7 +125,7 @@
     "edit_profile": "Editar perfil",
     "logout": "Cerrar sesión",
     "login": "Iniciar sesión",
-    "login_title": "Bienvenido de nuevo",
+    "login_title": "Bienvenido",
     "have_no_account": "¿No tienes una cuenta?",
     "create_one_account": "Haz clic aquí para crear una",
     "please_enter": "Por favor ingresa",
