--- a/wwwroot/i18n/es-CO.json
+++ b/wwwroot/i18n/es-CO.json
@@ -87,6 +87,7 @@
     "clientes.actualizar-cliente": "Actualizar Cliente",
     "facturacion": "Facturación",
     "facturacion.crear-factura": "Crear factura",
+    "facturacion.cancelacion-factura": "Anular factura",
     "facturacion.historial-facturas": "Historial de facturas",
     "entiti-config": "Configuración de Entidad",
     "entiti-config.entiti-config.crear": "Crear entidad",
