--- a/wwwroot/i18n/en-US.json
+++ b/wwwroot/i18n/en-US.json
@@ -91,7 +91,9 @@
     "facturacion.cancelacion-factura": "Anular factura",
     "entiti-config": "Configuración de Entidad",
     "entiti-config.entiti-config.crear": "Crear entidad",
-    "entiti-config.entiti-config.editar": "Editar entidad"
+    "entiti-config.entiti-config.editar": "Editar entidad",
+    "Caja": "Caja",
+    "Caja.Cierre de Caja": "Cierre de caja"
   },
   "validation": {
     "required": "Este campo es obligatorio",
